Changed the encoding of a URL in a test. Trying to fix a test error in Jenkins.